<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cardboard">

    <ImageView
        android:id="@+id/img_top"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/create_move" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="225sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_top"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/hint_description"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="25"
        android:selectAllOnFocus="true" />

    <ImageButton
        android:id="@+id/btn_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/img_top"
        android:layout_toLeftOf="@+id/et_description"
        android:background="@mipmap/ic_action_about" />

    <TextView
        android:id="@+id/title_starting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_description"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/title_starting_address"
        android:textSize="30sp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_starting_street"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_starting"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/hint_street"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="40"
        android:selectAllOnFocus="true"/>

    <EditText
        android:id="@+id/et_starting_city_state_zip"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_starting_street"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/hint_city_state_zip"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="40"
        android:selectAllOnFocus="true"/>

    <TextView
        android:id="@+id/title_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_starting_city_state_zip"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/title_destination_address"
        android:textSize="30sp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_destination_street"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_destination"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/hint_street"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="40"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/et_destination_city_state_zip"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_destination_street"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/hint_city_state_zip"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="40"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_destination_city_state_zip"
        android:layout_marginTop="15dp"
        android:text="@string/start_move"
        android:textStyle="bold"
        android:background="@drawable/note" />

</RelativeLayout>