<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cardboard" >

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:context="brett.bearden.com.boxed.MapsActivity"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/et_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="25"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/title_starting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_description"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/title_starting_address"
        android:textSize="30sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/et_starting_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_starting"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/hint_street"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="40"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/et_starting_city_state_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_starting_street"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/hint_city_state_zip"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDarkRed"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="40"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/title_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_starting_city_state_zip"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/title_destination_address"
        android:textSize="30sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/et_destination_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_destination"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/hint_street"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDarkRed"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="40"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/et_destination_city_state_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_destination_street"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:hint="@string/hint_city_state_zip"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="40"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/btn_show_boxes"
        android:layout_width="110dp"
        android:layout_height="40sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/et_destination_city_state_zip"
        android:layout_marginTop="15dp"
        android:text="Show Boxes"
        android:textStyle="bold"
        android:background="@drawable/note"/>

    <Button
        android:id="@+id/btn_edit_move"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_show_boxes"
        android:layout_marginTop="15dp"
        android:text="@string/edit_move"
        android:textStyle="bold"
        android:background="@drawable/note"/>

    <ProgressBar
        android:id="@+id/progress_circle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:progressTint="@color/colorPrimaryDark"
        android:visibility="invisible" />

</RelativeLayout>